--- a/movies/src/main/resources/application.properties
+++ b/movies/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.database=movies-api-db
-spring.data.mongodb.uri=mongodb+srv://Dima:${env.MONGO_PASSWORD}@movie-cluster-1.owxoaxh.mongodb.net
+spring.data.mongodb.database=movie-api-db
+spring.data.mongodb.uri=mongodb+srv://Dima:${env.MONGO_PASSWORD}@movie-cluster-1.owxoaxh.mongodb.net/
 
